--- a/tests/sharq.test.conf
+++ b/tests/sharq.test.conf
@@ -1,13 +1,14 @@
 [sharq]
-job_expire_interval  : 5000 ; in milliseconds
-job_requeue_interval : 5000 ; in milliseconds
+job_expire_interval       : 5000 ; in milliseconds
+job_requeue_interval      : 5000 ; in milliseconds
+default_job_requeue_limit : -1 ; retries infinitely
 
 [redis]
-db                   : 0
-key_prefix           : test_sharq
-conn_type            : unix_sock ; or tcp_sock
+db                        : 0
+key_prefix                : test_sharq
+conn_type                 : tcp_sock ; or unix_sock
 ;; unix connection settings
-unix_socket_path     : /tmp/redis.sock
+unix_socket_path          : /tmp/redis.sock
 ;; tcp connection settings
-port                 : 6379
-host                 : 127.0.0.1
+port                      : 6379
+host                      : 127.0.0.1
