--- a/sharq/sharq.conf
+++ b/sharq/sharq.conf
@@ -1,7 +1,7 @@
 [sharq]
-job_expire_interval       : 1000 ; in milliseconds
-job_requeue_interval      : 1000 ; in milliseconds
-default_job_requeue_limit : -1 ; retries infinitely
+job_expire_interval       : 120000 ; in milliseconds
+job_requeue_interval      : 5000 ; in milliseconds
+default_job_requeue_limit : 0 ; value of -1 retries infinitely
 
 [redis]
 db                        : 0
@@ -12,4 +12,4 @@ unix_socket_path          : /tmp/redis.sock
 ;; tcp connection settings
 port                      : 6379
 host                      : 127.0.0.1
-clustered                 : false  
+clustered                 : false
